# media-research

./: .gitignore  Pipfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  seed.json  vite.config.js  webpack.config.js
.github/workflows/: django.yml
accounts/: forms.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: serializers.py  views.py
archive/: admin.py  apps.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
archive/migrations/: 0001_initial.py  0002_agent_gnd_id.py  0002_archive_description.py  0002_person_topic_archive_description_interview_duration_and_more.py  0002_remove_resource_locations_and_more.py  0002_resource_anon_title.py  0003_agent_remove_resource_people_agency_resource_agents_and_more.py  0003_alter_locationreference_location_and_more.py  0003_alter_topicreference_timecode.py  0003_interview_media_type_interview_media_url_and_more.py  0003_resource_type.py  0004_alter_topicreference_timecode_metadatakey_and_more.py  0004_delete_transcript.py  0004_interview_duration_alter_interview_poster.py  0004_resource_archive_res_title_d94d90_idx.py  0005_alter_charfieldmetadata_options_and_more.py  (+16 more)
entities/: admin.py  apps.py  models.py  urls.py  views.py
interviews/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
materials/: admin.py  apps.py  models.py  urls.py  views.py
media_explorer/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
media_research/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
pages/: urls.py  views.py
(+113 files in other folders)
