[tool.poetry]
name = "media-explorer"
version = "0.1.0"
description = ""
authors = ["Marc Altmann <marcaltmann@posteo.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
django-debug-toolbar = "^4.4.2"
django-webpack-loader = "^3.1.0"
djangorestframework = "^3.15.2"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
Faker = "^25.8.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
